--- a/solutions/monitoring/index.asciidoc
+++ b/solutions/monitoring/index.asciidoc
@@ -9,14 +9,15 @@ This definition already includes the following:
 * *Level of control:* That is your bandwidth in which your defined service operates normally aka known as baseline
 * *Measuring:* A measurement is a single act that quantifies an attribute of a part, equipment, service or process (CPU load, available memory etc.). Data measured is emitted by the monitored resources and aka telemetry.
 * *Monitoring consumer:* The user trying to keep the service within its baseline boundaries. A single control plane is usually preferred to simplify the operations for the consumer aka monitoring plane. Depending on its perspective the area of cous might differ such as performance, costs, security etc. Independent from the underlying platform.
-
++
+--
 Actions might be triggered by the system or the consumer to achieve that. This might include:
 
 * Visualize current state
 * Detect Deviations from baseline
 * Root cause analysis
 * Forward externally
-
+--
 Monitoring should be implemented as feedback loop where lessons learnt are the starting point for further improvements on the defined service side. E.g. by adaptive scaling depending on monitored traffic.
 
 The use case defines what is the defined service and the perspectives and control level to be achieved. It also defines external dependencies/ preconditions that have to be considered. Deployment of monitored resources might also be part of it. The platform provides the technical capabilities on which the sue case is implemented. The picture below illustrates this:
@@ -46,7 +47,8 @@ The possibilities depend heavily on the perspective and the resources you want t
 The following conventions apply regarding the measurement for monitored resources:
 
 * *Push to monitoring plane*
-
++
+--
 In that case telemetry is forwarded to the monitoring plane. This can be necessary if the telemetry is not available in Azure monitor out of the box or pulling from the monitored resources is not possible. Examples of forwarding that requires explicit activation:
 
 * Diagnostic setting (differs per resource): requires a diagnostic setting to be activated.
@@ -54,22 +56,26 @@ In that case telemetry is forwarded to the monitoring plane. This can be necessa
 * Manual forwarding: e.g. by scheduled process using API provided by Azure Monitor if the exporting options are not granular enough
 
 This approach requires additional data sources on in the monitoring plane which might be inside Azure monitor (Log Analytics Workspace/ App Insights) or external.
-
+--
 * *Pull from monitored resource*
-
++
+--
 In that case the telemetry data is read directly from the monitoring plane such as metrics. Logs cannot be read directly and require pushing. Compared to pushing this method is also faster.
+--
 
 Azure Monitor as monitoring plane covers the following major features:
 
 * *Telemetry Analytics*
-
++
+--
 Kusto is addressing that need and allows you to access external data sources such as blobs and internal data sources inside Azure Monitor. Graphical representation is also possible.
-
+--
 * *Visualization* (Workbooks, Dashboards, other services)
 * *Alerts*
-
++
+--
 To react automatically if outside operational boundaries. Results from Kusto queries can be used as trigger.
-
+--
 * *Root Cause analysis* (TODO)
 ** Application Map => application dependencies in other services such as backend APIs or databases
 ** Smart Detection => warn you when anomalies in performance or utilization patterns
@@ -78,13 +84,15 @@ To react automatically if outside operational boundaries. Results from Kusto que
 ** Cross-component transaction diagnostics => shows you broken piece in the entire transaction
 ** Snapshot Debugger => collect a snapshot of a live application in case of an exception, to analyze it at a later stage.
 * *Integration*
-
++
+--
 Azure Monitor has also extensive integration features. This includes:
 
 * Integrating telemetry from other Azure services (e.g. Azure Security Center also forwards to Azure Monitor)
 * Integrating external data sources (e.g. Blobs by using Kusto external operator)
 * Integrating third party tools such as Prometheus for Azure Kuberenetes
 * Exposing for data sources for external third party (e.g. Log Analytics Workspaces for Grafana)
+--
 
 Azure Monitor pricing comes with the following:
 
@@ -105,20 +113,21 @@ The solution is to use Azure Monitor and its features. The subsequent detail var
 Visualization requires the following points:
 
 * *Providing a canvas*
-
++
+--
 Canvas refers to the area on which you place carious components. The following options exist:
 
 [width="99%",cols="41%,16%,16%,12%,15%",options="header",]
 |===
-|  |Azure | | |Third party
-|  |Workbooks |Dashboards |Power BI |Grafana
-|Auto refresh in 5 Min Intervall |  |  |  |???
-|Full screen |  |X |??? |???
-|Tabs |X |  |??? |???
-|Fixed Parameter lists |X |  |??? |X
-|Drill down |  |  |X |X
-|Additional hosting required |  |  |  |X
-|Terraform Support |  |X |X |X
+|  3+|Azure |Third party
+|  |Workbooks |Dashboards |Power BI |Grafana
+|Auto refresh in 5 Min Intervall |X  |X  |  |???
+|Full screen |  |X |??? |???
+|Tabs |X |  |??? |???
+|Fixed Parameter lists |X |  |??? |X
+|Drill down |  |  |X |X
+|Additional hosting required |  |  |  |X
+|Terraform Support |  |X |X |X
 |===
 
 Regarding components for logs/ metrics:
@@ -126,12 +135,15 @@ Regarding components for logs/ metrics:
 * Metrics: Pull (Metrics explorer) or push (Kusto query targeting data source) possible
 * Logs: Push to monitoring plane only
 * Grafana can be used for visualization via using a connector for log analytics workspace
+--
 
 * *Data source*
-
++
+--
 Can be inside Azure Monitor or external. External stores can avoid high Azure Monitor costs for ingestion/ storage.
 
-+++NOTE:+++ Referencing an external data source requires authentication e.g. by using a shared access signature for a blob. Updating a saved query is only possible for log analytics.
+*NOTE* Referencing an external data source requires authentication e.g. by using a shared access signature for a blob. Updating a saved query is only possible for log analytics.
+--
 
 ==== Measuring
 
@@ -139,11 +151,11 @@ The table below shows possible options:
 
 [width="100%",cols="41%,15%,15%,16%,13%",options="header",]
 |===
-|  |Diagnostic Settings |App Insights |Push via resource API |Metrics Explorer
+|  |Diagnostic Settings |App Insights |Push via resource API |Metrics Explorer
 |Possible per resource |(X) |(X) |X |(X)
 |Telemetry Customization |Limited |High |Limited-High |Limited
-|Custom Logging in executed code |  |X |  | 
-|Telemetry always captured | X | (X) |X | X
+|Custom Logging in executed code |  |X |  | 
+|Telemetry always captured | X | (X) |X | X
 |Latency |Medium |Medium |Medium |Low
 |Direction |Push |Push |Push |Pull
 |===
