changed authentication documentation

--- a/solutions/authentication/index.asciidoc
+++ b/solutions/authentication/index.asciidoc
@@ -1,4 +1,10 @@
+//Category=Security;Authentication
+//Products=Keycloak;WSO2;Gluu;ForgeRock
+//Standards=OAuth;OIDC;JWT;SAML;WebAuthn
+
 = Authentication
+
+== Authentication
 
 Access control is an important aspect for the security in IT application landscapes. There are two different aspects to distinguish:
 
@@ -11,15 +17,20 @@ This part deals with the recommendations on authentication.
 In large IT landscapes it is a highly recommended best-practice to centralize your authentication. Implemeting the actual authentication into every application or service is therefore considered as an anti-pattern. Instead we suggest to use a central identity and access management (IAM) solution based on established products (e.g. https://www.keycloak.org/[Keycloak]).
 
 === Using a central IAM
-When using a central IAM, the user is redirected to the identity provider (IdP) when trying to access the application. The IdP returns a login page where the user can log in. After confirming that the user can access the application, the IdP returns a https://jwt.io/[JSON Web Token] (JWT) that the user can use to access the application. Participants integrate with the identity provider using protocols such as https://openid.net/connect/[OpenId Connect], https://docs.oasis-open.org/security/saml/Post2.0/sstc-saml-tech-overview-2.0.html[SAMLv2] or https://webauthn.io/[WebAuthn]. The original incoming request is forwarded to the actual service and the JWT is added as a bearer token via HTTP header according to https://oauth.net/[OAuth] standard. In the application, the token can be validated according to the user's roles and groups.
+When using a central IAM, the user is redirected to the identity provider (IdP) when trying to access the application. The IdP returns a login page where the user can log in. After confirming that the user can access the application, the IdP returns an access token that the user can use to access the application. We recommend the use https://jwt.io/[JSON Web Tokens] (JWT) within the authentication flow, as this is a widely used method in modern web applications and RESTful services.
+
+Participants integrate with the identity provider using protocols such as https://openid.net/connect/[OpenId Connect], https://docs.oasis-open.org/security/saml/Post2.0/sstc-saml-tech-overview-2.0.html[SAMLv2] or https://webauthn.io/[WebAuthn]. The original incoming request is forwarded to the actual service and the token is added as a bearer token via HTTP header according to https://oauth.net/[OAuth] standard. In the application, the token can be validated according to the user's roles and groups.
 
 image::authentication_flow.png[Abstract authentication flow]
 
-Typically, a gateway is placed in front of the IdP and applications to act as a reverse proxy for the actual service. Incoming traffic goes through the gateway and the gateway is then responsible for authentication through integration with the identity provider. In this way, multiple applications and services can be deployed without implementing integration between the service itself and the IdP. The JWT can be validated only on the gateway side or additionally passed to the application for further validation.
+Typically, a gateway is placed in front of the IdP and applications to act as a reverse proxy for the actual service. Incoming traffic goes through the gateway and the gateway is then responsible for authentication through integration with the identity provider. In this way, multiple applications and services can be deployed without implementing integration between the service itself and the IdP. The access token can be validated only on the gateway side or additionally passed to the application for further validation.
 
 Services are implemented stateless and only accept requests with valid JWT from gateway. When one of your services invokes another service it simply passes on the JWT via HTTP header. This way all sub-sequent invocations happen within the context and with the permissions of the initial user.
 
 The gateway should also act as a portal that integrates the UIs of your microservices so that end users do not notice which UI comes from which service, but have the user experience (UX) of a single monolithic UI.
+
+=== Which protocol to use
+We suggest using OIDC as the protocol for integration with the identity provider. It is easy to integrate and works well with mobile and web-based applications. OIDC uses JSON tokens and RESTful APIs to provide the authentication information. Therefore, it is a much more lightweight solution than SAML, which uses an XML and SOAP-based approach.
 
 === Values for the customer
 * all services are independent and decoupled from the actual authentication and IAM
