--- a/solutions/cloudwatchCustomiceAlarmMessage/index.asciidoc
+++ b/solutions/cloudwatchCustomiceAlarmMessage/index.asciidoc
@@ -1,12 +1,12 @@
-//Category=monitoring
-//Products=AWS;cloudwatch;lambda;ses
+//Category=Monitoring
+//Product=AWS;cloudwatch;lambda;ses
 
 :toc: macro
 toc::[]
 :idprefix:
 :idseparator: -
 
-= _Customise your cloudwatch alerts 
+= Customise your cloudwatch alerts 
 
 == You have the following problem to be solved
 Cloudwatch alarms give you the ability to notify you in case an alarm is triggered. The standard message layout of cloudwatch is very inflexible and not customisable. With this approach it is possible to fill HTML templates with further information, links and buttons to find the solution ASAP.
