--- a/solutions/authentication/index.asciidoc
+++ b/solutions/authentication/index.asciidoc
@@ -1,6 +1,6 @@
 //Category=Security;Authentication
 //Product=Keycloak;WSO2;Gluu;ForgeRock
-//Standards=OAuth;OIDC;JWT;SAML;WebAuthn
+//Standard=OAuth;OIDC;JWT;SAML;WebAuthn
 
 = Authentication
 
