--- a/solutions/authentication/index.asciidoc
+++ b/solutions/authentication/index.asciidoc
@@ -1,7 +1,7 @@
 //Category=Security;Authentication
 //Product=Keycloak;WSO2;Gluu;ForgeRock
 //Standard=OAuth;OIDC;JWT;SAML;WebAuthn
-//Maturity_Level=Complete
+//Maturity level=Complete
 
 = Authentication
 
