--- a/solutions/cloudwatchCustomiceAlarmMessage/index.asciidoc
+++ b/solutions/cloudwatchCustomiceAlarmMessage/index.asciidoc
@@ -1,6 +1,6 @@
 //Category=Monitoring
 //Product=AWS;cloudwatch;lambda;ses
-//Maturity_Level=Initial
+//Maturity level=Initial
 
 :toc: macro
 toc::[]
