Added Platform tag

--- a/solutions/cloudwatchCustomiceAlarmMessage/index.asciidoc
+++ b/solutions/cloudwatchCustomiceAlarmMessage/index.asciidoc
@@ -1,5 +1,6 @@
 //Category=Monitoring
-//Product=AWS;cloudwatch;lambda;ses
+//Product=cloudwatch;lambda;ses
+//Platform=AWS
 //Maturity level=Initial
 
 :toc: macro
